# CS4032Labs

./: .gitignore  README.md
Lab2/: .server.py.swp  README.md  client.py  compile.sh  server.py  start.sh
Lab3/: README.md  client.py  compile.sh  server.py  start.sh
Project/: README.md  notes.md
Project/client/: README.md  client.cabal  run.sh  stack.yaml
Project/client/.stack-work/install/x86_64-osx/lts-7.16/8.0.1/doc/file-system-0.1.0.0/: LICENSE
Project/client/.stack-work/install/x86_64-osx/lts-7.16/8.0.1/flag-cache/: aeson-0.11.2.1-EvvVy7RUk571N9rAPFuWeR  aeson-pretty-0.8.2-7y8tUySNKSMK2CTKbVRWr3  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  ansi-wl-pprint-0.6.7.3-LVnipygDrAR1FEMFhjxcQX  appar-0.1.4-1in4Ewd8JBkAYDZSWXLSe0  async-2.1.1-xFiBzw9xoB8HPZAuxUY2o  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  auto-update-0.1.4-GAesfFmqoZzBz6e09kRyzb  base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  blaze-builder-0.4.0.2-KWDLbdBYSBoALiMW0LHIz1  blaze-html-0.8.1.3-8MBPJsFNBtBBD2gWERenva  blaze-markup-0.7.1.1-IE161DWDHNXF9O8bBguli5  byteorder-1.0.4-BbL4c17EpZrL9PcZm0xys9  bytestring-builder-0.10.8.1.0-4GkSrJiY0n01lBdCh7onK  bytestring-conversion-0.3.1-EAlKk6pzstQ97QOJQPK8Q6  case-insensitive-1.2.0.7-FlqweN7AuKj9EdU2arVEt4  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  cookie-0.4.2.1-2a2c54yIyBn79Ul3iLWclJ  cryptonite-0.21-CjDlga2Xhiv5FtBiAIB19S  data-default-class-0.1.2.0-FYQpjIylblBDctdkHAFeXA  dlist-0.8.0.2-GWAMmbX9rLg3tqrbOizHGv  double-conversion-2.0.2.0-1OXaMV7XK5k4xEuBWX0hy2  easy-file-0.2.1-bAUkz2rC2kFhBbPjw2Of5  exceptions-0.8.3-7py7fmRxowDFpHmiHGKrTb  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  fast-logger-2.4.7-E7H6TuZQzia59KuB50vayl  file-embed-0.0.10-IXfudWSq57y1Athysk5ifZ  file-system-0.1.0.0-CXPaEHY0S8J73rxVUUkwFZ  hashable-1.2.4.0-EMu4H7FB10MAl6hwKw992G  hex-0.1.2-5b29FECtEYw7JOQYzG1Un6  http-api-data-0.2.4-3jwS7OrPl3l4oJfG3gRZ5C  http-date-0.0.6.1-150spKQYCuoIrltdbMmYGs  http-media-0.6.4-82jDVCpdN5H696EFF5l5I4  http-types-0.9.1-8WdUZL4twHzANJbxvb1Aoj  http2-1.6.2-8AbNCX9FS8K1gUe78Emp1g  iproute-1.7.1-9hsGfRvggCmFA0ueZi5Sd9  lifted-base-0.2.3.8-KLkd0w1UJqu6nE8oVTTEBy  memory-0.13-ABHR5331zHK9scHPRr7afU  mime-types-0.1.0.7-AxQ64wFjikqCSdK5pSeZvh  (+45 more)
Project/client/.stack-work/install/x86_64-osx/lts-7.16/8.0.1/lib/x86_64-osx-ghc-8.0.1/file-system-0.1.0.0-CXPaEHY0S8J73rxVUUkwFZ/: FileServer.dyn_hi  FileServer.hi  Lib.dyn_hi  Lib.hi  libHSfile-system-0.1.0.0-CXPaEHY0S8J73rxVUUkwFZ-ghc8.0.1.dylib
Project/client/.stack-work/install/x86_64-osx/lts-7.16/8.0.1/pkgdb/: file-system-0.1.0.0-CXPaEHY0S8J73rxVUUkwFZ.conf  package.cache
Project/client/.stack-work/install/x86_64-osx/lts-7.9/8.0.1/flag-cache/: client-0.1.0.0-2GtH6qrsZTo3FyXFFqI9CP  client-0.1.0.0-DIQLwlwndko5ok7IgZ1e13  file-system-0.1.0.0-3TR4wOi2hXaGIfdKhtwVtA
Project/client/.stack-work/install/x86_64-osx/lts-7.9/8.0.1/lib/x86_64-osx-ghc-8.0.1/client-0.1.0.0-2GtH6qrsZTo3FyXFFqI9CP/: Client.dyn_hi  Client.hi  Lib.dyn_hi  Lib.hi  libHSclient-0.1.0.0-2GtH6qrsZTo3FyXFFqI9CP-ghc8.0.1.dylib
Project/client/.stack-work/install/x86_64-osx/lts-7.9/8.0.1/lib/x86_64-osx-ghc-8.0.1/client-0.1.0.0-DIQLwlwndko5ok7IgZ1e13/: Client.dyn_hi  Client.hi  Lib.dyn_hi  libHSclient-0.1.0.0-DIQLwlwndko5ok7IgZ1e13-ghc8.0.1.dylib
Project/client/.stack-work/install/x86_64-osx/lts-7.9/8.0.1/lib/x86_64-osx-ghc-8.0.1/file-system-0.1.0.0-3TR4wOi2hXaGIfdKhtwVtA/: FileServer.dyn_hi  FileServer.hi  Lib.dyn_hi  Lib.hi  libHSfile-system-0.1.0.0-3TR4wOi2hXaGIfdKhtwVtA-ghc8.0.1.dylib
Project/client/.stack-work/install/x86_64-osx/lts-7.9/8.0.1/pkgdb/: client-0.1.0.0-DIQLwlwndko5ok7IgZ1e13.conf  file-system-0.1.0.0-3TR4wOi2hXaGIfdKhtwVtA.conf  package.cache
Project/client/src/: Client.hs  Lib.hs
Project/client/user-files/: hello.txt  post.txt  user.txt
Project/directory-service/: README.md  directory-service.cabal  run.sh  stack.yaml
Project/directory-service/app/: Main.hs
Project/directory-service/src/: DirectoryService.hs
Project/file-system/: LICENSE  README.md  file-system.cabal  run.sh  stack.yaml
Project/file-system/app/: Main.hs
Project/file-system/src/: FileServer.hs  FileServer.hs~
Project/file-system/static-files/: post.txt  user.txt
Project/file-system/test/: upload.sh
Project/lock-service/: LICENSE  lock-service.cabal  run.sh  stack.yaml
Project/lock-service/app/: Main.hs
Project/lock-service/src/: LockService.hs
