name:                client
version:             0.1.0.0
synopsis:            Client Proxy component for CS4032 Distributed File System project
description:         Please see README.md
homepage:            https://github.com/conormag94/CS4032Labs/tree/master/Project/client
license:             BSD3
license-file:        LICENSE
author:              Conor Maguire
maintainer:          conormag94@gmail.com
copyright:           2017 Conor Maguire
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Client
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , ansi-terminal
                     , directory
                     , directory-service
                     , file-system
                     , http-client
                     , servant
                     , servant-client
                     , servant-server
                     , text
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010

executable client-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , client
  default-language:    Haskell2010

test-suite client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/conormag94/CS4032Labs
