name:                directory-service
version:             0.1.0.0
synopsis:            Directory Server component for CS4032 Distributed File System project
description:         Please see README.md
homepage:            https://github.com/conormag94/CS4032Labs/tree/master/Project/directory-service#readme
license:             BSD3
license-file:        LICENSE
author:              Conor Maguire
maintainer:          conormag94@gmail.com
copyright:           2017 Conor Maguire
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , DirectoryService
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , ansi-terminal
                     , base-compat
                     , directory
                     , file-system
                     , http-client
                     , mtl
                     , servant
                     , servant-client
                     , servant-server
                     , text
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010

executable directory-service-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , directory-service
  default-language:    Haskell2010

test-suite directory-service-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , directory-service
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/conormag94/CS4032Labs
