name:                file-system
version:             0.1.0.0
synopsis:            File Server component for CS4032 Distributed File System project
description:         Please see README.md
homepage:            https://github.com/conormag94/CS4032Labs/tree/master/Project/file-system#readme
license:             BSD3
license-file:        LICENSE
author:              Conor Maguire
maintainer:          conormag94@gmail.com
copyright:           2017 Conor Maguire
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , FileServer
  build-depends:       base >= 4.7 && < 5
                     , base-compat
                     , mtl
                     , attoparsec
                     , bytestring
                     , lock-service
                     , string-conversions
                     , text
                     , time
                     , http-media
                     , http-client
                     , directory
                     , aeson
                     , servant
                     , servant-server
                     , servant-client
                     , wai
                     , warp
  default-language:    Haskell2010

executable file-system-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , file-system
  default-language:    Haskell2010

test-suite file-system-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , file-system
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/conormag94/CS4032Labs
