name:                lock-service
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/conormag94/lock-service#readme
license:             BSD3
license-file:        LICENSE
author:              Conor Maguire
maintainer:          conormag94@gmail.com
copyright:           Copyright: (c) 2017 Conor Maguire
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , LockService
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , base-compat
                     , bson
                     , directory
                     , file-system
                     , http-client
                     , mtl
                     , mongoDB
                     , resourcet
                     , servant
                     , servant-client
                     , servant-server
                     , text
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010

executable lock-service-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lock-service
  default-language:    Haskell2010

test-suite lock-service-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lock-service
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/conormag94/lock-service
